updated comments